chore: strengthen gitignore + add offline MMAD export script

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,138 @@
-# Python
-__pycache__/
-*.pyc
-.venv/
-.env
+################################################################################
+# AgentIAD-MMAD Repro: .gitignore (strict)
+################################################################################
 
-# OS / IDE
+# ------------------------------------------------------------------------------
+# OS / Editor
+# ------------------------------------------------------------------------------
+.DS_Store
+Thumbs.db
+Desktop.ini
+
 .vscode/
 .idea/
-.DS_Store
+*.swp
+*.swo
 
-# Logs / outputs
-outputs/
-wandb/
-runs/
+# ------------------------------------------------------------------------------
+# Python bytecode / caches
+# ------------------------------------------------------------------------------
+__pycache__/
+*.py[cod]
+*$py.class
+.pytest_cache/
+.mypy_cache/
+.pytype/
+.pyre/
+.ruff_cache/
+
+# ------------------------------------------------------------------------------
+# Virtual environments
+# ------------------------------------------------------------------------------
+.venv/
+.venv_*/
+venv/
+ENV/
+env/
+pip-wheel-metadata/
+
+# ------------------------------------------------------------------------------
+# Build / packaging
+# ------------------------------------------------------------------------------
+build/
+dist/
+*.egg-info/
+.eggs/
+*.whl
+*.tar.gz
+*.zip
+
+# ------------------------------------------------------------------------------
+# Logs / temp
+# ------------------------------------------------------------------------------
 *.log
+logs/
+tmp/
+temp/
+*.tmp
 
-# HuggingFace cache (按你习惯)
+# ------------------------------------------------------------------------------
+# Jupyter
+# ------------------------------------------------------------------------------
+.ipynb_checkpoints/
+
+# ------------------------------------------------------------------------------
+# ML / HF / caches
+# ------------------------------------------------------------------------------
 .hf/
-cache/
+.cache/
+**/.cache/
+**/.hf/
+huggingface-cache/
+wandb/
+mlruns/
+lightning_logs/
+tensorboard/
+runs/
+
+# ------------------------------------------------------------------------------
+# Data & outputs (DO NOT COMMIT)
+#   - Keep code/configs in repo, keep datasets/results outside git history.
+# ------------------------------------------------------------------------------
+data/
+outputs/
+artifacts/
+checkpoints/
+models/
+weights/
+results/
+metrics/
+predictions/
+
+# If you keep a tiny *placeholder* file under data/, you can selectively allow it:
+# !data/README.md
+# !data/.gitkeep
+
+# ------------------------------------------------------------------------------
+# Project-specific sandboxes / zips / verification dirs (from your workflow)
+# ------------------------------------------------------------------------------
+_coldstart/
+_zip_sandbox_*/
+_zip_verify/
+**/_zip_sandbox_*/
+**/_zip_verify/
+
+# ------------------------------------------------------------------------------
+# Windows / PowerShell / misc
+# ------------------------------------------------------------------------------
+*.lnk
+*.stackdump
+
+# ------------------------------------------------------------------------------
+# Secrets (just in case)
+# ------------------------------------------------------------------------------
+.env
+.env.*
+*.pem
+*.key
+*.crt
+*token*
+*secret*
+
+# ------------------------------------------------------------------------------
+# Optional: large binary artifacts
+# ------------------------------------------------------------------------------
+*.arrow
+*.pt
+*.pth
+*.ckpt
+*.onnx
+*.bin
+*.safetensors
+*.npy
+*.npz
+*.parquet
+*.pkl
+*.pickle
+*.h5
+*.hdf5
